# jazversememory

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: deploy.ps1  install_on_server.sh  jazversememory.service
scripts/: test_public_mcp.py
src/jazversememory/: server.py  storage.py
tests/: test_storage.py
